bug repairs